# kairo

./: Cargo.toml  LICENSE  README.md  release.toml  rustfmt.toml
.github/workflows/: check.yml  release.yml
kairo/: Cargo.toml
kairo-app/: Cargo.toml
kairo-app/src/: app.rs  main.rs
kairo-cli/: Cargo.toml
kairo-cli/src/: cli.rs  lib.rs  main.rs
kairo-core/: Cargo.toml
kairo-core/src/: error.rs  exec.rs  handler.rs  lib.rs
kairo-core/tests/: exec_test.rs  handler_test.rs  utils.rs
kairo-core/tests/entries/: fail.desktop
kairo-desktop/: Cargo.toml
kairo-desktop/assets/desktop/: kairo.desktop
kairo-desktop/src/: app.rs  cli.rs  lib.rs  main.rs
kairo/desktop/: kairo.desktop
kiro/: Cargo.toml
kiro/src/: error.rs  lib.rs  main.rs
mime/: Cargo.toml
src/: app.rs  error.rs  handler.rs  lib.rs  main.rs
tests/: app_test.rs  exec_test.rs  handler_test.rs  lib_test.rs  utils.rs
tests/entries/: black-hole.desktop
