[package]
name = "kiro"
description = "CLI and Desktop application for smart URL routing"
version = "0.1.0"
authors = ["Augusto Elesbão <aelesbao@gmail.com>"]
edition = "2024"
repository = "https://github.com/aelesbao/kiro"
homepage = "https://github.com/aelesbao/kiro"
documentation = "https://docs.rs/kiro"
license = "Apache-2.0"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["freedesktop", "desktop", "cli"]

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
clap = { version = "4.5.51", features = ["derive"] }
clap-verbosity = "2.1.0"
console = "0.16.1"
dialoguer = "0.12.0"
freedesktop-desktop-entry = "0.7.19"
freedesktop-icons = "0.4.0"
iced = { version = "0.13.1", features = ["advanced", "image", "debug", "svg"] }
log = "0.4.28"
mime = "0.3.17"
pretty_env_logger = "0.5.0"
shell-words = "1.1.0"
thiserror = "2.0.17"
unicode-segmentation = "1.12.0"
url = "2.5.7"
