[workspace]
members = ["kairo", "kairo-core", "kairo-cli", "kairo-desktop"]
resolver = "3"

[workspace.package]
description = "CLI and Desktop application for smart URL routing"
version = "0.3.3"
authors = ["Augusto Elesbão <aelesbao@gmail.com>"]
edition = "2024"
repository = "https://github.com/aelesbao/kairo"
homepage = "https://github.com/aelesbao/kairo"
documentation = "https://docs.rs/kairo"
license = "Apache-2.0"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["freedesktop", "desktop", "cli"]

[workspace.dependencies]
kairo-core = { path = "kairo-core", version = "0.3.3" }
kairo-cli = { path = "kairo-cli", version = "0.3.3" }
kairo-desktop = { path = "kairo-desktop", version = "0.3.3" }

anyhow = { version = "1.0.100", features = ["backtrace"] }
clap = { version = "4.5.51", features = ["derive"] }
clap-verbosity = "2.1.0"
console = "0.16.1"
dialoguer = "0.12.0"
freedesktop-desktop-entry = "0.8.0"
freedesktop-icons = "0.4.0"
iced = { version = "0.14.0", features = ["advanced", "image", "debug", "svg"] }
log = "0.4.28"
mime = "0.3.17"
pretty_env_logger = "0.5.0"
shell-words = "1.1.0"
thiserror = "2.0.17"
unicode-segmentation = "1.12.0"
url = "2.5.7"

[profile.release]
# Reduce code generation units the crates will be split into.
codegen-units = 1
# Produce better optimized code, using whole-program analysis.
lto = "fat"
# Enable integer overflow checks.
overflow-checks = true
# Write debug info into a separate file.
split-debuginfo = "packed"
# Decrease final binary size.
strip = "debuginfo"
# Exit process with SIGABRT when any thread panics.
panic = "abort"
