[package]
name = "kairo-app"
version = "0.1.0"
edition = "2024"

[dependencies]
kairo-core = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
clap-verbosity = { workspace = true }
console = { workspace = true }
dialoguer = { workspace = true }
iced = { workspace = true }
log = { workspace = true }
pretty_env_logger = { workspace = true }
unicode-segmentation = { workspace = true }
