[package]
name = "kairo-desktop"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
license.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
kairo-core = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
clap-verbosity = { workspace = true }
console = { workspace = true }
dialoguer = { workspace = true }
iced = { workspace = true }
log = { workspace = true }
pretty_env_logger = { workspace = true }
unicode-segmentation = { workspace = true }

[package.metadata.deb]
section = "web"
assets = [
  "$auto",
  { source = "assets/*", dest = "usr/share/kairo/", mode = "644" },
  { source = "../LICENSE", dest = "usr/share/doc/kairo/LICENSE", mode = "644" },
]

[package.metadata.bundle]
name = "Kairo"
identifier = "io.github.aelesbao.Kairo"
icon = ["assets/kairo.png"]
category = "public.app-category.productivity"
resources = ["assets/*", "../LICENSE"]
long_description = """Kairo routes links to the right app."""
osx_url_schemes = ["http", "https"]
linux_mime_types = ["x-scheme-handler/http", "x-scheme-handler/https"]
linux_exec_args = "%u"
