[package]
name = "kairo-desktop"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
license.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
kairo-core = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
clap-verbosity = { workspace = true }
console = { workspace = true }
dialoguer = { workspace = true }
iced = { workspace = true }
log = { workspace = true }
pretty_env_logger = { workspace = true }
unicode-segmentation = { workspace = true }

[package.metadata.deb]
section = "web"
assets = [
  "$auto",
  { source = "assets/*.svg", dest = "usr/share/kairo-desktop/", mode = "644" },
  { source = "../LICENSE", dest = "usr/share/doc/kairo-desktop/LICENSE", mode = "644" },
]
