[package]
name = "cosmic-mime-apps"
description = "Parse and update xdg mimeapps.list files to manage default apps"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
publish = false

[dependencies]
freedesktop-desktop-entry = { workspace = true }
mime = { workspace = true }
quick-xml = "0.38"
xdg = "3.0"
